Admin Panel includes Sortable usage deom

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "font-awesome": "~4.*",
     "ionicons": "~2.*",
     "jquery-legacy": "jquery#1.11.*",
-    "jquery-migrate": "1.2.*"
+    "jquery-migrate": "1.2.*",
+    "Sortable": "1.*"
   }
 }
