Includes Spectrum color picker library, add set_crud_color_picker() to Admin Controller

--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,8 @@
     "jquery-legacy": "jquery#1.11.*",
     "jquery-migrate": "1.2.*",
     "Sortable": "1.*"
+  },
+  "dependencies": {
+    "spectrum": "^1.8.0"
   }
 }
