--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-concat": "*",
     "gulp-imagemin": "*",
     "gulp-notify": "*",
+    "gulp-sass": "^2.3.1",
     "gulp-sequence": "*",
     "gulp-sourcemaps": "*",
     "gulp-uglify": "*",
